# autodidact

./: .gitignore  README.md
generators/: deep-learning-pset.md
prompts/: gpt2.md
psets/gpt2/: README.md  pyproject.toml
psets/gpt2/configs/: gpt2_small.yaml  tiny.yaml
psets/gpt2/scripts/: build_climbmix_subset.py  download_climbmix.py  download_openai_gpt2.py
psets/gpt2/tests/: test_attention.py  test_data.py  test_integration.py  test_loss.py  test_model_shapes.py  test_no_transformers.py  test_tokenizer.py  test_weight_loading.py
system/: deep-learning-pset.md
