[project]
name = "gpt2-eqx"
version = "0.1.0"
description = "Problem set for implementing GPT-2 in JAX and Equinox."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "equinox>=0.11.10",
    "grain[parquet]>=0.2.16",
    "jax[cpu]>=0.5.0",
    "numpy>=1.26",
    "optax>=0.2.4",
    "pyarrow>=17.0.0",
    "regex>=2024.5.15",
    "safetensors>=0.4.5",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.5.0",
]

[dependency-groups]
setup = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    "tiktoken>=0.7.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
